force-app/main/default/objects/tc9_pr__Payroll_Event__e/tc9_pr__Payroll_Event__e.object-meta.xml
<CustomObject>
    <description>Platform event records created by packaged Payroll processes.  These events can be subscribed to and used to trigger the execution of further processes.</description>
    <label>Payroll Event</label>
    <pluralLabel>Payroll Events</pluralLabel>
</CustomObject>