force-app/main/default/objects/tc9_pr__Payroll_Event__e/fields/tc9_bgl__Journal_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Journal_Id__c</fullName>
    <description>Accounting Payroll Journal salesforce 18 character record id</description>
    <label>Journal Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>