force-app/main/default/objects/tc9_pr__Payroll_Event__e/fields/tc9_bgl__Setup_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_bgl__Setup_Id__c</fullName>
    <label>Setup Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>