force-app/main/default/objects/tc9_pr__Payroll_Event__e/fields/tc9_pr__Pay_Batch_Action__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Action__c</fullName>
    <description>Pay Batch action that has been completed i.e. Payment File Release, Calculate Failed</description>
    <label>Pay Batch Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>