force-app/main/default/objects/tc9_pr__Payroll_Event__e/fields/tc9_pr__Pay_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Pay_Batch_Id__c</fullName>
    <description>Pay Batch salesforce 18 character record id</description>
    <label>Pay Batch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>